Bug 296450 - Duplicate "General" tabs are shown in Address book properties
Summary: Duplicate "General" tabs are shown in Address book properties
Status: RESOLVED FIXED
Alias: None
Product: kontact
Classification: Applications
Component: contacts (other bugs)
Version First Reported In: unspecified
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Tobias Koenig
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-03-20 18:46 UTC by Alex
Modified: 2012-03-23 08:08 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.8.2
Sentry Crash Report:


Attachments
Screenshot (48.34 KB, image/png)
2012-03-20 18:46 UTC, Alex
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Alex 2012-03-20 18:46:16 UTC
Created attachment 69767 [details]
Screenshot

Kontact version 4.7.3 (sorry, this version was not selectable from the list)

STR:
1. navigate to "Contacts" (from menu on the left)
2. (optional) add new Address Book if none exists
3. right-click any address book, then choose "Folder Properties"

Results:
Property window is opened with multiple "General" tabs in it

Expected results:
Each tab should have unique name
Comment 1 Laurent Montel 2012-03-22 17:44:46 UTC
I confirm it in 4.8.1 we must start kontact look at folder property in kmail and after switch to kaddressbook and look at folder property.
Comment 2 Laurent Montel 2012-03-23 08:05:26 UTC
Git commit e3fc391f766c91ea95ab87002381bca371e74b63 by Montel Laurent.
Committed on 23/03/2012 at 09:04.
Pushed by mlaurent into branch 'master'.

Add missing setCollectionPropertiesPageNames need to fix bug #296450

M  +5    -0    akonadi/contact/standardcontactactionmanager.cpp
M  +5    -0    akonadi/contact/standardcontactactionmanager.h

http://commits.kde.org/kdepimlibs/e3fc391f766c91ea95ab87002381bca371e74b63
Comment 3 Laurent Montel 2012-03-23 08:06:10 UTC
Git commit e63a9e6d03aa8f36f795e6a7621468834dbffebb by Montel Laurent.
Committed on 23/03/2012 at 09:04.
Pushed by mlaurent into branch 'KDE/4.8'.

Add missing setCollectionPropertiesPageNames need to fix bug #296450
(cherry picked from commit e3fc391f766c91ea95ab87002381bca371e74b63)

M  +5    -0    akonadi/contact/standardcontactactionmanager.cpp
M  +5    -0    akonadi/contact/standardcontactactionmanager.h

http://commits.kde.org/kdepimlibs/e63a9e6d03aa8f36f795e6a7621468834dbffebb
Comment 4 Laurent Montel 2012-03-23 08:07:15 UTC
Git commit 1fde2df74fc23ca85c9d45dfc41801832be3df24 by Montel Laurent.
Committed on 23/03/2012 at 09:06.
Pushed by mlaurent into branch 'master'.

Fix Bug 296450 - Duplicate "General" tabs are shown in Address book properties
FIXED-IN: 4.8.2

M  +5    -0    kaddressbook/mainwidget.cpp

http://commits.kde.org/kdepim/1fde2df74fc23ca85c9d45dfc41801832be3df24
Comment 5 Laurent Montel 2012-03-23 08:08:05 UTC
Git commit dd33fb42da5ecbb652d37eef3777c14244dc9c4b by Montel Laurent.
Committed on 23/03/2012 at 09:06.
Pushed by mlaurent into branch 'KDE/4.8'.

Fix Bug 296450 - Duplicate "General" tabs are shown in Address book properties
FIXED-IN: 4.8.2
(cherry picked from commit 1fde2df74fc23ca85c9d45dfc41801832be3df24)

M  +5    -0    kaddressbook/mainwidget.cpp

http://commits.kde.org/kdepim/dd33fb42da5ecbb652d37eef3777c14244dc9c4b