Fix Bug 296450 - Duplicate "General" tabs are shown in Address book properties

BUG: 296450
FIXED-IN: 4.8.2